# ItemCalculator

./: .gitignore  README.md  concept.md  main.py  requirements.txt  setup.cfg
UserStories/: PopulateItems.md  PopulateRecipes.md  SearchRecipe.md
src/: __init__.py  db_handler.py  item_handler.py  model.py  populate_all.py  populate_items.py  populate_recipes.py  recipe_handler.py  test.py
src/Data/: by_hand.txt  crimson_demon_altar.txt  furnace.txt  iron_lead_anvil.txt  items.txt  mythril_orichalcum_anvil.txt
tests/: test_gui.py  test_handler.py  test_populators.py  test_project.py
