[metadata]
name = ItemCalculator
author = Lukas Lackner
author_email = lackne190044@sr.htlweiz.at
description = Calculate basic Resources needed to craft item.
version = 1.0.0
url = https://github.com
keywords = logging
	pytest
	school
	file 
	output
	input

license_file =
	LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
fip_safe = False
install_requires =
	sqlalchemy
	keyboard

[options.extras_require]
dev =
	pytest
	debugpy

[tool:pytest]
testpaths = tests
log_level = info
